...
                    android:layout_marginStart="@dimen/dp_16"
                    android:src="@drawable/icon_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_add_geofence_search"
                    style="@style/SP14MediumBlackTextStyle"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_0"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:hint="@string/search"
...
                    android:gravity="start"
                    android:textDirection="locale"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_add_geofence_1" />

                <SeekBar
                    android:id="@+id/seekbar_geofence_radius"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:elevation="@dimen/dp_4"
                    android:maxHeight="@dimen/dp_4"
                    android:progress="50"
...
            app:cardElevation="@dimen/dp_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_enter_geofence_name"
                style="@style/SP14MediumBlackTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:hint="@string/type_geofence_name"
...
                android:textAlignment="viewStart"
                android:textColorHint="@color/color_hint_text" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_add_geofence_save"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_48"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_30"
            app:cardBackgroundColor="@color/color_primary_green"
            app:cardCornerRadius="@dimen/dp_8"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_geofence_search_places_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    android:paddingBottom="@dimen/dp_46" />

...
