...
            android:background="@drawable/bottom_sheet_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_add_geofence"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_13"
            app:cardBackgroundColor="@color/color_primary_green"
            app:cardCornerRadius="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_geofence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constrainedHeight="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_tracker_geofence_simulation"
            tools:listitem="@layout/item_geofence_list" />

        <include
            android:id="@+id/cl_search_loader_geofence_list"
            layout="@layout/bottom_sheet_search_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/dp_16"
...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_empty_geofence_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/bottom_sheet_top_corner_curved_geofence"
        android:clickable="true"
        android:focusable="true"
...
                    app:layout_constraintStart_toEndOf="@id/iv_direction"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_add_geofence"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_48"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_8"
...
