...
                android:layout_gravity="bottom"
                android:background="@color/color_view_line" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_geofence_map"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_0"
            android:layout_marginEnd="@dimen/dp_16"
            android:clickable="true"
            android:focusable="true"
...
