...
        android:src="@drawable/ic_geofence_disable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_geofence_address_type"
        style="@style/SP16RegularWhiteTextStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:gravity="start"
        android:textDirection="locale"
...
