...
            android:layout_width="@dimen/dp_3"
            android:layout_height="@dimen/dp_3"
            android:layout_marginHorizontal="@dimen/dp_10"
            app:cardBackgroundColor="@color/color_hint_text"
            app:cardCornerRadius="@dimen/dp_30"
            app:layout_constraintBottom_toBottomOf="@id/tv_direction_distance"
            app:layout_constraintEnd_toStartOf="@id/tv_direction_time"
            app:layout_constraintStart_toEndOf="@id/tv_direction_distance"
            app:layout_constraintTop_toTopOf="@id/tv_direction_distance" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_loader_sheet_2"
            android:layout_width="@dimen/dp_100"
...
            android:textColor="@color/color_32ADE6"
            app:layout_constraintEnd_toEndOf="@id/sheet_direction_gl_direction_end"
            app:layout_constraintStart_toStartOf="@id/direction_sheet_gl_direction_start"
            app:layout_constraintTop_toBottomOf="@id/tv_direction_distance" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_direction_error_2"
            style="@style/SP13HintRegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:ellipsize="end"
            android:gravity="start"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_phone,card_loader_phone_2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_direction"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_12"
            app:cardBackgroundColor="@color/color_primary_green"
            app:cardUseCompatPadding="false"
...
