...
                        android:src="@drawable/icon_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_search_places"
                        style="@style/SearchText"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="@dimen/dp_0"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:hint="@string/search"
...
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_search_places_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    android:paddingBottom="@dimen/dp_46" />

...
